calculator-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calcuator-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: calculator-app
          servicePort: 80
        path: /my-calculator-app(/|$)(.*)
  - host: a8113f544116f444b899e018cf651e61-16669756.us-east-1.elb.amazonaws.com # change the IP address here
    http:
      paths:
      - backend:
          serviceName: calculator-app
          servicePort: 80
        path: /my-calculator-app
